<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.FlashcardSetActivity"
    android:background="@drawable/background">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/buttons"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_arrow_back_24"
        android:tint="@color/btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/addFlashcardButton" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/test_btn_text"
        android:textColor="@color/btn_txt"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintEnd_toStartOf="@id/addFlashcardButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/addFlashcardButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/buttons"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_add_24"
        android:tint="@color/btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flashcardSetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:textSize="45sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/addFlashcardButton"
        app:layout_constraintEnd_toStartOf="@+id/addFlashcardButton" />

    <EditText
        android:id="@+id/search"
        android:layout_width="640dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/search_placeholder"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flashcardSetTitle"
        app:layout_constraintEnd_toStartOf="@id/searchButton"/>

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/search_btn_text"
        android:src="@android:drawable/ic_menu_search"
        android:backgroundTint="@color/buttons"
        app:tint="@color/btn_txt"
        app:layout_constraintTop_toBottomOf="@id/flashcardSetTitle"
        app:layout_constraintStart_toEndOf="@id/search"/>

    <ImageButton
        android:id="@+id/setSearchClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/search_clear_btn_text"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:backgroundTint="@color/buttons"
        app:tint="@color/btn_txt"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/flashcardSetTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flashcardsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="180sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="163dp" />

    <Button
        android:id="@+id/addReminderButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_reminder"
        android:textColor="@color/btn_txt"
        android:textSize="20sp"
        android:backgroundTint="@color/buttons"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/addFlashcardButton"
        app:layout_constraintTop_toBottomOf="@id/testButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>