<resources>
    <!-- Application Name -->
    <string name="app_name">IntelliCards</string>

    <!-- Action Buttons -->
    <string name="submit_btn_text">Submit</string>
    <string name="create_set_btn_text">Create New Set</string>
    <string name="edit_btn_text">EDIT</string>
    <string name="delete_btn_text">DELETE</string>
...
