<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.intellicards.Presentation.MainActivity"
    android:background="@drawable/background">

    <!-- Header with Title and Profile Button -->

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profileButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/transparent"
        android:cropToPadding="true"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_account_circle_24"
        android:tint="@color/buttons"
        app:layout_constraintBottom_toBottomOf="@id/headerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerTitle" />

    <!-- Create New Flashcard Set -->
    <Button
        android:id="@+id/createNewSetButton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/create_set_btn_text"
        android:textColor="@color/btn_txt"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Scroll and Click on New Sets to Flashcards Inside Those Sets -->

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toTopOf="@id/createNewSetButton">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="5dp"
            android:useDefaultMargins="true"/>
    </ScrollView>

    <!-- Search Bar and Search Button for Flashcard Sets -->

    <EditText
        android:id="@+id/search"
        android:layout_width="620dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/flashcard_set_search_placeholder"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTitle" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/search_btn_text"
        android:src="@android:drawable/ic_menu_search"
        android:backgroundTint="@color/buttons"
        app:tint="@color/btn_txt"
        app:layout_constraintTop_toBottomOf="@id/headerTitle"
        app:layout_constraintStart_toEndOf="@id/search"/>

    <ImageButton
        android:id="@+id/setSearchClearButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/search_clear_btn_text"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:backgroundTint="@color/buttons"
        app:tint="@color/btn_txt"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/headerTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
