...
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/buttons"
        android:scaleType="fitCenter"
...
