...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flashcardTextRecycle"
            android:layout_width="600dp"
            android:minHeight="145dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text=""
            android:textSize="22sp"
...
